k8s/apps/network/headscale/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
  labels:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/instance: headscale
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/instance: headscale
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
    - name: grpc
      port: 50443
      targetPort: 50443
---
apiVersion: v1
kind: Service
metadata:
  name: headplane
  namespace: headscale
  labels:
    app.kubernetes.io/name: headplane
    app.kubernetes.io/instance: headplane
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: headplane
    app.kubernetes.io/instance: headplane
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
