k8s/apps/network/headscale/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  namespace: headscale
  labels:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/instance: headscale
spec:
  ingressClassName: ingress-external-traefik
  rules:
    - host: headscale.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  name: web
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: headscale-ui
                port:
                  name: web
